--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "buffer": "^6.0.3",
     "fast-xml-parser": "^4.0.11",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
